# claude-code-tools

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
claude_code_tools/: __init__.py  dotenv_vault.py  find_claude_session.py  tmux_cli_controller.py  tmux_remote_controller.py
docs/: claude-code-tmux-tutorials.md  dot-zshrc.md  find-claude-session.md  tmux-cli-instructions.md  vault-documentation.md
hooks/: README.md  bash_hook.py  file_size_conditional_hook.py  git_add_block_hook.py  git_checkout_safety_hook.py  grep_block_hook.py  notification_hook.sh  posttask_subtask_flag.py  pretask_subtask_flag.py  rm_block_hook.py  settings.sample.json
scripts/: fcs-function.sh
