[project]
name = "claude-code-tools"
version = "0.1.7"
description = "Collection of tools for working with Claude Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "fire>=0.5.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["commitizen>=3.0.0"]

[project.scripts]
find-claude-session = "claude_code_tools.find_claude_session:main"
vault = "claude_code_tools.dotenv_vault:main"
tmux-cli = "claude_code_tools.tmux_cli_controller:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.7"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "claude_code_tools/__init__.py:__version__"
]
update_changelog_on_bump = false